--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
 		<!--JS Libraries-->
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		<!--Services-->
 		<script src="app/components/weather/weather-service.js"></script>
 		<script src="app/components/image/image-service.js"></script>
